styling for light puzzle nav

--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -1,6 +1,56 @@
 @use "variables";
 @use "sass:color";
 
+div.light.category-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	div.selector-container {
+		display: flex;
+		align-items: center;
+		padding: 2em;
+	}
+
+	button.selector {
+		margin: 0.5em;
+		cursor: pointer;
+
+		&:focus {
+			outline: none;
+		}
+
+		&.next,
+		&.previous {
+			border: none;
+			padding: 0.3em 0.5em;
+			border-radius: 0.3em;
+			color: color.adjust(variables.$color10, $lightness: -20);
+			background-color: color.adjust(variables.$color10, $lightness: 15);
+		}
+
+		&.instance {
+			height: 1em;
+			width: 1em;
+			border-radius: 1em;
+			border: none;
+			background-color: variables.$color10;
+
+			&.selected {
+				background-color: color.adjust(
+					variables.$color10,
+					$lightness: -30
+				);
+			}
+		}
+
+		&.inactive {
+			opacity: 0.3;
+			cursor: default;
+		}
+	}
+}
+
 div.light-puzzle-container {
 	position: relative;
 	display: flex;
@@ -23,7 +73,7 @@ div.light-puzzle-container {
 				margin: 0.5em;
 				border-radius: 1em;
 
-				@media (max-width: 420px){
+				@media (max-width: 420px) {
 					height: 3em;
 					width: 3em;
 					margin: 0.4em;
@@ -32,7 +82,10 @@ div.light-puzzle-container {
 				cursor: pointer;
 
 				&.active {
-					background-color: variables.$color10;
+					background-color: color.adjust(
+						variables.$color3,
+						$lightness: 20
+					);
 				}
 
 				&.inactive {
@@ -79,7 +132,7 @@ div.light-puzzle-container {
 		color: #888;
 		z-index: -1;
 
-		@media (max-width: 420px){
+		@media (max-width: 420px) {
 			padding-left: 12em;
 			margin-top: -0.75em;
 		}
