nav buttons only change color when active

--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -46,7 +46,7 @@ div.light.category-container {
 			}
 
 			@media (hover: hover) {
-				&:hover {
+				&.active:hover {
 					color: color.adjust(variables.$color10, $lightness: -35);
 					background-color: color.adjust(
 						variables.$color10,
