--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -190,7 +190,7 @@ div.light-instructions {
 				display: flex;
 				justify-content: space-between;
 			}
-			margin: 2em 0;
+			margin-bottom: 2em;
 
 			p {
 				margin-right: 3em;
