--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -158,16 +158,10 @@ div.light-puzzle-container {
 	}
 
 	div.saving-indicator {
-		margin-top: -2.7em;
-		padding-left: 20em;
-		color: #aaa;
+		position: absolute;
+		left: 85%;
+		color: #bbb;
 		z-index: -1;
-		font-size: 0.8em;
-
-		@media (max-width: 420px) {
-			padding-left: 12em;
-			margin-top: -0.75em;
-		}
 	}
 
 	div.moves-indicator {
