--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -190,5 +190,16 @@ div.light-instructions {
 				margin-right: 3em;
 			}
 		}
+
+		div.examples {
+			@media (min-width: 600px) {
+				display: flex;
+				justify-content: center;
+			}
+
+			div.example {
+				margin: 0 3em;
+			}
+		}
 	}
 }
