--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -188,6 +188,15 @@ div.light-instructions {
 
 			p {
 				margin-right: 3em;
+
+				&.emphasized {
+					padding: 0.3em 0.5em;
+					border-radius: 0.3em;
+					background-color: color.adjust(
+						variables.$color3,
+						$lightness: 20
+					);
+				}
 			}
 		}
 
