--- a/src/stylesheets/_calcudoku.scss
+++ b/src/stylesheets/_calcudoku.scss
@@ -29,8 +29,8 @@ $scaling-420px: 1 / 2;
 		height: $puzzle-dimension;
 		width: $puzzle-dimension;
 		gap: 1px;
-		background-color: black;
-		border: solid 3px;
+		background-color: color.adjust(variables.$color7, $lightness: -40);
+		border: solid 3px color.adjust(variables.$color7, $lightness: -40);
 		grid-template-columns: repeat($puzzle-size, 1fr);
 		grid-template-rows: repeat($puzzle-size, 1fr);
 		@media (max-width: 420px) {
@@ -44,7 +44,7 @@ $scaling-420px: 1 / 2;
 			background-color: white;
 			box-sizing: border-box;
 			padding: 0.5em;
-			border: solid 2px;
+			border: solid 2px color.adjust(variables.$color7, $lightness: -40);
 			@media (max-width: 420px) {
 				border: solid 2px * $scaling-420px;
 				padding: 0.3em * $scaling-420px;
@@ -100,6 +100,7 @@ $scaling-420px: 1 / 2;
 				position: absolute;
 				top: 0.2em;
 				left: 0.2em;
+				color: color.adjust(variables.$color7, $lightness: -50);
 
 				@media (max-width: 420px) {
 					font-size: 2em * $scaling-420px * $instructionScale;
@@ -112,6 +113,11 @@ $scaling-420px: 1 / 2;
 				height: 100%;
 				font-size: 4em * $instructionScale;
 				background-color: white;
+				color: color.adjust(
+					variables.$color7,
+					$lightness: -35,
+					$saturation: -45
+				);
 				@media (max-width: 420px) {
 					font-size: 3.5em * $scaling-420px * $instructionScale;
 				}
@@ -150,7 +156,20 @@ $scaling-420px: 1 / 2;
 				font-size: 3em * $scaling-420px;
 			}
 			padding: 0.15em 0.5em;
+			border: solid 2px color.adjust(variables.$color7, $lightness: -40);
+			border-radius: 0.3em;
+			color: color.adjust(variables.$color7, $lightness: -50);
+			background-color: color.adjust(
+				variables.$color7,
+				$lightness: 22,
+				$saturation: -30
+			);
 			cursor: pointer;
+
+			&:hover {
+				color: color.adjust(variables.$color7, $saturation: 50);
+				border-color: color.adjust(variables.$color7, $saturation: 50);
+			}
 		}
 	}
 }
@@ -177,18 +196,14 @@ div.puzzle-container {
 	}
 }
 
-div.instance-list-container {
-	@include home.list(
-		color.adjust(variables.$color3, $lightness: -20, $saturation: -30),
-		color.adjust(variables.$color3, $lightness: 30, $saturation: -30),
-		color.adjust(variables.$color3, $saturation: -30),
-		color.adjust(variables.$color7, $lightness: -35),
-		color.adjust(variables.$color7, $lightness: 28),
-		variables.$color7
-	);
-}
-
 div.calcudoku-instructions {
+	h2 {
+		color: color.adjust(variables.$color7, $lightness: -40);
+	}
 	display: flex;
 	flex-direction: column;
+
+	@media (max-width: 600px) {
+		text-align: center;
+	}
 }
