--- a/src/stylesheets/_home.scss
+++ b/src/stylesheets/_home.scss
@@ -62,14 +62,14 @@ div.dashboard-container {
 	div.potd-container {
 		cursor: pointer;
 		padding: 2em;
-		border: 3px solid variables.$color7;
+		border: 3px solid color.adjust(variables.$color7, $lightness: 0);
 		border-radius: 1em;
 		&:hover {
 			background-color: color.adjust(variables.$color7, $lightness: 28);
 		}
 		h2 {
 			margin: 0;
-			color: color.adjust(variables.$color7, $lightness: -35);
+			color: color.adjust(variables.$color7, $lightness: -40);
 		}
 		div.potd-preview {
 			margin: 2em;
@@ -78,48 +78,22 @@ div.dashboard-container {
 	div.puzzle-list-container {
 		@include list(
 			color.adjust(variables.$color10, $lightness: -55),
-			variables.$color12,
-			variables.$color10,
-			color.adjust(variables.$color3, $lightness: -20, $saturation: -30),
-			color.adjust(variables.$color3, $lightness: 30, $saturation: -30),
-			color.adjust(variables.$color3, $saturation: -30)
+			color.adjust(variables.$color12, $lightness: 6),
+			color.adjust(variables.$color10, $lightness: -15),
+			color.adjust(variables.$color3, $lightness: -40),
+			color.adjust(variables.$color7, $lightness: 28),
+			color.adjust(variables.$color3, $lightness: -15)
 		);
-		/*padding: 2em;
-		border: 3px solid variables.$color10;
-		margin-top: 2em;
-		border-radius: 1em;
-		background-color: variables.$color12;
-		h2 {
-			margin: 0;
-			color: color.adjust(variables.$color10, $lightness: -55);
-		}
-		ul {
-			list-style-type: none;
-			display: grid;
-			grid-template-columns: repeat(2, 1fr);
-			grid-auto-rows: auto;
-			gap: 1.5em;
-			padding: 0;
-			li {
-				background-color: white;
-				padding: 1em;
-				border: 3px solid variables.$color3;
-				border-radius: 0.5em;
-				cursor: pointer;
-				&:hover {
-					background-color: color.adjust(
-						variables.$color3,
-						$lightness: 30
-					);
-				}
-				h3 {
-					margin: 0;
-					color: color.adjust(variables.$color3, $lightness: -35);
-				}
-				div.list-preview {
-					margin: 0.5em;
-				}
-			}
-		}*/
 	}
+}
+
+div.instance-list-container {
+	@include list(
+		color.adjust(variables.$color3, $lightness: -40),
+		color.adjust(variables.$color5, $lightness: 25, $saturation: -30),
+		color.adjust(variables.$color3, $lightness: -25),
+		color.adjust(variables.$color7, $lightness: -40),
+		color.adjust(variables.$color7, $lightness: 28),
+		color.adjust(variables.$color7, $lightness: 0, $saturation: 30)
+	);
 }
