--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -102,54 +102,17 @@ div.dashboard-container div.potd-container:hover {
 }
 div.dashboard-container div.potd-container h2 {
   margin: 0;
-  color: #1a5490;
+  color: #17477a;
 }
 div.dashboard-container div.potd-container div.potd-preview {
   margin: 2em;
 }
 div.dashboard-container div.puzzle-list-container {
   padding: 2em;
-  border: 3px solid #9edfe5;
+  border: 3px solid #62cbd5;
   margin-top: 2em;
   border-radius: 1em;
-  background-color: #ddf3f5;
-  /*padding: 2em;
-  border: 3px solid variables.$color10;
-  margin-top: 2em;
-  border-radius: 1em;
-  background-color: variables.$color12;
-  h2 {
-  	margin: 0;
-  	color: color.adjust(variables.$color10, $lightness: -55);
-  }
-  ul {
-  	list-style-type: none;
-  	display: grid;
-  	grid-template-columns: repeat(2, 1fr);
-  	grid-auto-rows: auto;
-  	gap: 1.5em;
-  	padding: 0;
-  	li {
-  		background-color: white;
-  		padding: 1em;
-  		border: 3px solid variables.$color3;
-  		border-radius: 0.5em;
-  		cursor: pointer;
-  		&:hover {
-  			background-color: color.adjust(
-  				variables.$color3,
-  				$lightness: 30
-  			);
-  		}
-  		h3 {
-  			margin: 0;
-  			color: color.adjust(variables.$color3, $lightness: -35);
-  		}
-  		div.list-preview {
-  			margin: 0.5em;
-  		}
-  	}
-  }*/
+  background-color: #f5fbfc;
 }
 @media (max-width: 290px) {
   div.dashboard-container div.puzzle-list-container {
@@ -176,21 +139,71 @@ div.dashboard-container div.puzzle-list-container ul {
 div.dashboard-container div.puzzle-list-container ul li {
   background-color: white;
   padding: 1em;
-  border: 3px solid #846fd9;
+  border: 3px solid #3a0fec;
   border-radius: 0.5em;
   cursor: pointer;
 }
 div.dashboard-container div.puzzle-list-container ul li:hover {
-  background-color: #ebe8f9;
+  background-color: #f0f6fc;
 }
 div.dashboard-container div.puzzle-list-container ul li h3 {
   margin: 0;
-  color: #4930b2;
+  color: #1d0775;
 }
 div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
 }
 div.dashboard-container div.puzzle-list-container ul li.completed {
+  opacity: 0.5;
+}
+
+div.instance-list-container {
+  padding: 2em;
+  border: 3px solid #2e0cbc;
+  margin-top: 2em;
+  border-radius: 1em;
+  background-color: #f5f5fc;
+}
+@media (max-width: 290px) {
+  div.instance-list-container {
+    padding: 2em 0.75em;
+  }
+}
+div.instance-list-container h2 {
+  margin: 0;
+  color: #1d0775;
+}
+div.instance-list-container ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  gap: 1.5em;
+  padding: 0;
+}
+@media (max-width: 420px) {
+  div.instance-list-container ul {
+    grid-template-columns: 1fr;
+  }
+}
+div.instance-list-container ul li {
+  background-color: white;
+  padding: 1em;
+  border: 3px solid #5facfe;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+div.instance-list-container ul li:hover {
+  background-color: #f0f6fc;
+}
+div.instance-list-container ul li h3 {
+  margin: 0;
+  color: #17477a;
+}
+div.instance-list-container ul li div.list-preview {
+  margin: 0.5em;
+}
+div.instance-list-container ul li.completed {
   opacity: 0.5;
 }
 
@@ -223,8 +236,8 @@ div.puzzle-container[size="4"] div.grid-container {
   height: 30em;
   width: 30em;
   gap: 1px;
-  background-color: black;
-  border: solid 3px;
+  background-color: #17477a;
+  border: solid 3px #17477a;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
 }
@@ -240,7 +253,7 @@ div.puzzle-container[size="4"] div.grid-container div.calcudoku-square {
   background-color: white;
   box-sizing: border-box;
   padding: 0.5em;
-  border: solid 2px;
+  border: solid 2px #17477a;
   cursor: pointer;
 }
 @media (max-width: 420px) {
@@ -285,6 +298,7 @@ div.puzzle-container[size="4"] div.grid-container div.calcudoku-square div.cage-
   position: absolute;
   top: 0.2em;
   left: 0.2em;
+  color: #0f2e4f;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="4"] div.grid-container div.calcudoku-square div.cage-indicator {
@@ -298,6 +312,7 @@ div.puzzle-container[size="4"] div.grid-container div.calcudoku-square input {
   height: 100%;
   font-size: 4em;
   background-color: white;
+  color: #41556a;
   text-align: right;
   cursor: pointer;
   -moz-appearance: textfield;
@@ -329,12 +344,20 @@ div.puzzle-container[size="4"] div.number-select-container {
 div.puzzle-container[size="4"] div.number-select-container button {
   font-size: 3em;
   padding: 0.15em 0.5em;
+  border: solid 2px #17477a;
+  border-radius: 0.3em;
+  color: #0f2e4f;
+  background-color: #dde6f0;
   cursor: pointer;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="4"] div.number-select-container button {
     font-size: 1.5em;
   }
+}
+div.puzzle-container[size="4"] div.number-select-container button:hover {
+  color: #5eacff;
+  border-color: #5eacff;
 }
 div.puzzle-container[size="5"] {
   display: flex;
@@ -361,8 +384,8 @@ div.puzzle-container[size="5"] div.grid-container {
   height: 37.5em;
   width: 37.5em;
   gap: 1px;
-  background-color: black;
-  border: solid 3px;
+  background-color: #17477a;
+  border: solid 3px #17477a;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
 }
@@ -378,7 +401,7 @@ div.puzzle-container[size="5"] div.grid-container div.calcudoku-square {
   background-color: white;
   box-sizing: border-box;
   padding: 0.5em;
-  border: solid 2px;
+  border: solid 2px #17477a;
   cursor: pointer;
 }
 @media (max-width: 420px) {
@@ -423,6 +446,7 @@ div.puzzle-container[size="5"] div.grid-container div.calcudoku-square div.cage-
   position: absolute;
   top: 0.2em;
   left: 0.2em;
+  color: #0f2e4f;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="5"] div.grid-container div.calcudoku-square div.cage-indicator {
@@ -436,6 +460,7 @@ div.puzzle-container[size="5"] div.grid-container div.calcudoku-square input {
   height: 100%;
   font-size: 4em;
   background-color: white;
+  color: #41556a;
   text-align: right;
   cursor: pointer;
   -moz-appearance: textfield;
@@ -467,12 +492,20 @@ div.puzzle-container[size="5"] div.number-select-container {
 div.puzzle-container[size="5"] div.number-select-container button {
   font-size: 3em;
   padding: 0.15em 0.5em;
+  border: solid 2px #17477a;
+  border-radius: 0.3em;
+  color: #0f2e4f;
+  background-color: #dde6f0;
   cursor: pointer;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="5"] div.number-select-container button {
     font-size: 1.5em;
   }
+}
+div.puzzle-container[size="5"] div.number-select-container button:hover {
+  color: #5eacff;
+  border-color: #5eacff;
 }
 div.puzzle-container[size="6"] {
   display: flex;
@@ -499,8 +532,8 @@ div.puzzle-container[size="6"] div.grid-container {
   height: 45em;
   width: 45em;
   gap: 1px;
-  background-color: black;
-  border: solid 3px;
+  background-color: #17477a;
+  border: solid 3px #17477a;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
 }
@@ -516,7 +549,7 @@ div.puzzle-container[size="6"] div.grid-container div.calcudoku-square {
   background-color: white;
   box-sizing: border-box;
   padding: 0.5em;
-  border: solid 2px;
+  border: solid 2px #17477a;
   cursor: pointer;
 }
 @media (max-width: 420px) {
@@ -561,6 +594,7 @@ div.puzzle-container[size="6"] div.grid-container div.calcudoku-square div.cage-
   position: absolute;
   top: 0.2em;
   left: 0.2em;
+  color: #0f2e4f;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="6"] div.grid-container div.calcudoku-square div.cage-indicator {
@@ -574,6 +608,7 @@ div.puzzle-container[size="6"] div.grid-container div.calcudoku-square input {
   height: 100%;
   font-size: 4em;
   background-color: white;
+  color: #41556a;
   text-align: right;
   cursor: pointer;
   -moz-appearance: textfield;
@@ -605,12 +640,20 @@ div.puzzle-container[size="6"] div.number-select-container {
 div.puzzle-container[size="6"] div.number-select-container button {
   font-size: 3em;
   padding: 0.15em 0.5em;
+  border: solid 2px #17477a;
+  border-radius: 0.3em;
+  color: #0f2e4f;
+  background-color: #dde6f0;
   cursor: pointer;
 }
 @media (max-width: 420px) {
   div.puzzle-container[size="6"] div.number-select-container button {
     font-size: 1.5em;
   }
+}
+div.puzzle-container[size="6"] div.number-select-container button:hover {
+  color: #5eacff;
+  border-color: #5eacff;
 }
 div.puzzle-container.instructions {
   display: flex;
@@ -637,8 +680,8 @@ div.puzzle-container.instructions div.grid-container {
   height: 22.5em;
   width: 22.5em;
   gap: 1px;
-  background-color: black;
-  border: solid 3px;
+  background-color: #17477a;
+  border: solid 3px #17477a;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
 }
@@ -654,7 +697,7 @@ div.puzzle-container.instructions div.grid-container div.calcudoku-square {
   background-color: white;
   box-sizing: border-box;
   padding: 0.5em;
-  border: solid 2px;
+  border: solid 2px #17477a;
   cursor: pointer;
   cursor: default;
 }
@@ -700,6 +743,7 @@ div.puzzle-container.instructions div.grid-container div.calcudoku-square div.ca
   position: absolute;
   top: 0.2em;
   left: 0.2em;
+  color: #0f2e4f;
 }
 @media (max-width: 420px) {
   div.puzzle-container.instructions div.grid-container div.calcudoku-square div.cage-indicator {
@@ -713,6 +757,7 @@ div.puzzle-container.instructions div.grid-container div.calcudoku-square input 
   height: 100%;
   font-size: 3em;
   background-color: white;
+  color: #41556a;
   text-align: right;
   cursor: pointer;
   cursor: default;
@@ -745,6 +790,10 @@ div.puzzle-container.instructions div.number-select-container {
 div.puzzle-container.instructions div.number-select-container button {
   font-size: 3em;
   padding: 0.15em 0.5em;
+  border: solid 2px #17477a;
+  border-radius: 0.3em;
+  color: #0f2e4f;
+  background-color: #dde6f0;
   cursor: pointer;
 }
 @media (max-width: 420px) {
@@ -752,60 +801,22 @@ div.puzzle-container.instructions div.number-select-container button {
     font-size: 1.5em;
   }
 }
-
-div.instance-list-container {
-  padding: 2em;
-  border: 3px solid #846fd9;
-  margin-top: 2em;
-  border-radius: 1em;
-  background-color: #ebe8f9;
-}
-@media (max-width: 290px) {
-  div.instance-list-container {
-    padding: 2em 0.75em;
-  }
-}
-div.instance-list-container h2 {
-  margin: 0;
-  color: #4930b2;
-}
-div.instance-list-container ul {
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: auto;
-  gap: 1.5em;
-  padding: 0;
-}
-@media (max-width: 420px) {
-  div.instance-list-container ul {
-    grid-template-columns: 1fr;
-  }
-}
-div.instance-list-container ul li {
-  background-color: white;
-  padding: 1em;
-  border: 3px solid #77ade6;
-  border-radius: 0.5em;
-  cursor: pointer;
-}
-div.instance-list-container ul li:hover {
-  background-color: #f0f6fc;
-}
-div.instance-list-container ul li h3 {
-  margin: 0;
-  color: #1a5490;
-}
-div.instance-list-container ul li div.list-preview {
-  margin: 0.5em;
-}
-div.instance-list-container ul li.completed {
-  opacity: 0.5;
+div.puzzle-container.instructions div.number-select-container button:hover {
+  color: #5eacff;
+  border-color: #5eacff;
 }
 
 div.calcudoku-instructions {
   display: flex;
   flex-direction: column;
+}
+div.calcudoku-instructions h2 {
+  color: #17477a;
+}
+@media (max-width: 600px) {
+  div.calcudoku-instructions {
+    text-align: center;
+  }
 }
 
 div.logic.instance p.puzzle-description {
@@ -853,15 +864,21 @@ div.light.category-container div.selector-container button.selector:focus {
 }
 div.light.category-container div.selector-container button.selector.next, div.light.category-container div.selector-container button.selector.previous {
   border: none;
-  padding: 0.3em 0.5em;
+  padding: 0.2em 0.5em 0.3em 0.5em;
+  border: none;
   border-radius: 0.3em;
-  background-color: #226dbb;
+  background-color: #3686da;
   color: white;
+  /*background-color: color.adjust(
+  	variables.$color7,
+  	$lightness: 22,
+  	$saturation: -30
+  );*/
 }
 @media (hover: hover) {
   div.light.category-container div.selector-container button.selector.active:hover {
-    color: #1a5490;
-    background-color: #b8d4f2;
+    background-color: #91c7ff;
+    /*border-color: color.adjust(variables.$color7, $saturation: 50);*/
   }
 }
 div.light.category-container div.selector-container button.selector.instance {
@@ -869,10 +886,17 @@ div.light.category-container div.selector-container button.selector.instance {
   width: 1em;
   border-radius: 1em;
   border: none;
-  background-color: #77ade6;
+  background-color: #3686da;
+}
+@media (hover: hover) {
+  div.light.category-container div.selector-container button.selector.instance:hover {
+    background-color: #91c7ff;
+  }
 }
 div.light.category-container div.selector-container button.selector.instance.selected {
-  background-color: #1e60a6;
+  background-color: #3686da;
+  opacity: 0.3;
+  cursor: default;
 }
 div.light.category-container div.selector-container button.selector.inactive {
   opacity: 0.3;
@@ -963,6 +987,9 @@ div.light-instructions {
   flex-direction: column;
   text-align: center;
 }
+div.light-instructions h2 {
+  color: #17477a;
+}
 div.light-instructions div.steps {
   max-width: 800px;
   align-self: center;
@@ -987,7 +1014,7 @@ div.light-instructions div.steps div.step p.emphasized {
   text-align: center;
   padding: 0.3em 0.5em;
   border-radius: 0.3em;
-  background-color: #c1b4fa;
+  background-color: #e1dafd;
 }
 @media (min-width: 600px) {
   div.light-instructions div.steps div.examples {
@@ -1010,14 +1037,14 @@ div.matchstick.puzzle-container div.display-container {
 div.matchstick.puzzle-container div.display-container canvas {
   height: min(90vw, 80vh);
   width: min(90vw, 80vh);
-  border: solid 2px #9edfe5;
+  border: solid 3px #1e60a6;
   border-radius: 3vw;
 }
 div.matchstick.puzzle-container div.display-container canvas.selecting {
   cursor: pointer;
 }
 div.matchstick.puzzle-container div.display-container svg.nav-button.reset {
-  fill: #2e0cbc;
+  fill: #1e60a6;
   cursor: pointer;
   user-select: none;
   position: absolute;
@@ -1035,7 +1062,7 @@ div.matchstick.puzzle-container div.display-container svg.nav-button.reset {
 }
 @media (hover: hover) {
   div.matchstick.puzzle-container div.display-container svg.nav-button.reset:hover {
-    fill: #ae9cf9;
+    fill: #77ade6;
   }
 }
 div.matchstick.puzzle-container div.display-container svg.nav-button.reset[isactive=false] {
@@ -1063,23 +1090,20 @@ button {
 button.try-it {
   margin: 1em;
   margin-bottom: 0;
-  padding: 0.7em;
+  padding: 0.8em;
   cursor: pointer;
   border: none;
   border-radius: 0.3em;
   font-size: 1.5em;
-  background-color: #7e6cfb;
+  background-color: #5eacff;
+  color: white;
   align-self: center;
 }
 button.try-it:focus {
   outline: none;
 }
 button.try-it:hover {
-  margin-top: 0.8em;
-  border-radius: 0.4em;
-  background-color: #ebe8fe;
-  color: #6853fa;
-  border: solid 0.2em #7e6cfb;
+  background-color: #91c7ff;
 }
 
 nav.main-nav {
@@ -1094,13 +1118,12 @@ nav.main-nav button.log-out {
   border-radius: 0.2em;
   cursor: pointer;
   padding-bottom: 0.2em;
-  color: #2c9aa4;
-  background-color: #daf3f5;
+  background-color: #39beca;
+  color: white;
 }
 @media (hover: hover) {
   nav.main-nav button.log-out:hover {
-    background-color: #39beca;
-    color: white;
+    background-color: #9edfe5;
   }
 }
 nav.main-nav button.log-out:focus {
@@ -1126,9 +1149,7 @@ nav.main-nav svg.back-button {
 }
 @media (hover: hover) {
   nav.main-nav svg.back-button:hover {
-    fill: #daf3f5;
-    stroke: #39beca;
-    stroke-width: 80;
+    fill: #9edfe5;
   }
 }
 
